Bug 123002 - Shape will be invisible after moving it to certain position
Summary: Shape will be invisible after moving it to certain position
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Patrick Jaap
URL:
Whiteboard: target:6.3.0
Keywords: bibisected, bisected
: 123342 (view as bug list)
Depends on:
Blocks: Shapes
  Show dependency treegraph
 
Reported: 2019-01-27 20:39 UTC by Telesto
Modified: 2019-09-20 13:53 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (77.45 KB, application/vnd.oasis.opendocument.text)
2019-01-28 10:14 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2019-01-27 20:39:02 UTC
Description:
Shape will be invisible after moving it to certain position

Steps to Reproduce:
1. Open the attached file
2. Go to page 3
3. Drag the rectangle up to the top of the page

Actual Results:
Invisible/transparent rectangle

Expected Results:
Visible blue rectangle


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.3.0.0.alpha0+
Build ID: 6740443311268b7d918bf4f43134d64fb78a0109
CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-01-15_23:37:04
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 1 Telesto 2019-01-27 20:42:26 UTC
Quite similar to bug 120839
Comment 2 Dieter 2019-01-27 21:16:17 UTC
(In reply to Telesto from comment #0)
> Steps to Reproduce:
> 1. Open the attached file

Telesto, attached file is missing
Comment 3 Telesto 2019-01-28 10:14:54 UTC
Created attachment 148703 [details]
Example file
Comment 4 Regina Henschel 2019-01-28 14:09:20 UTC
With dragging the rectangle you move the anchor of the rectangle. In this case the anchor moves to the last paragraph of the previous page. But the vertical position of the rectangle is not adapted correctly. Look into the Position&Size dialog. If you correct the vertical position to a reasonable value, the rectangle will appear on the previous page.

The problem is not in the size of the shape. If the rectangle has a smaller height, I see the error in the same way.

Workaround: Do not drag the rectangle but keep the anchor and set the rectangle position in the Position&Size dialog. Dragging an object in Writer has in addition the effect, that position is forced to "from top" or "from left". Thus any special position setting like "top to entire page" or "center to right page border" is lost. I avoid using dragging an object but use always the Position&Size dialog. To  move an object, do not drag the object but its anchor.

Nevertheless it is an error in the way dragging is handled.

Tested with Version: 6.3.0.0.alpha0+ (x64)
Build ID: 6d70e04f66cbeb3aeeb1e9b69d5b201ae3d24747
CPU threads: 8; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-01-19_23:55:14
Locale: de-DE (en_US); UI-Language: en-US
Calc: threaded
Comment 5 Telesto 2019-01-28 14:27:04 UTC
Adding bibisectrequest. In previous version the shape jumped to the previous page (but visible). Without regression keyword..
Comment 6 raal 2019-01-28 16:37:45 UTC
This seems to have begun at the below commit.
Adding Cc: to Patrick Jaap; Could you possibly take a look at this one? Thanks

commit a4eabd57e350f4edbf33fdc225854d82c907b28f
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Thu Dec 14 00:29:51 2017 -0800

    source 8d62b79f168180c6992eb483ec864d473050635f

author	Patrick Jaap <patrick.jaap@tu-dresden.de>	2017-11-29 12:41:33 +0100
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2017-12-11 15:39:10 +0100
commit 8d62b79f168180c6992eb483ec864d473050635f (patch)
tree 41fef4b75064d0c1d6e64809b8ea3b55c2959f7d
parent 4b941b7b7fd79415935c8f2d3ce900eb64a40f66 (diff)
tdf#112443 disable off-page content positioning
Comment 7 Patrick Jaap 2019-01-28 17:26:43 UTC
Hi! 

I can confirm the problem. The Anchor jumps the the previous page when moving the image and thus my "disable off page positioning" patch removes the content of the rectangle. I'll look into it! I think I have to add an exception for this kind of anchor. Maybe really similar to https://bugs.documentfoundation.org/show_bug.cgi?id=120839
Comment 8 Patrick Jaap 2019-01-29 15:59:02 UTC
Patch is on gerrit
https://gerrit.libreoffice.org/#/c/67088/

Any reviewers?
Comment 9 Commit Notification 2019-02-13 11:10:11 UTC
Patrick Jaap committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/8e2d16b337fbd1602af26bd9b40d7e86cee5202e%5E%21

tdf#123002 Disable off-page positioning for footer/header objects only

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 raal 2019-02-17 20:44:32 UTC
*** Bug 123342 has been marked as a duplicate of this bug. ***
Comment 11 Xisco Faulí 2019-03-21 11:43:41 UTC
A polite ping to Patrick Jaap:
Is this bug fixed? if so, could you please close it as RESOLVED FIXED ? Otherwise, Could you please explain what's missing?
Thanks
Comment 12 Patrick Jaap 2019-03-21 12:41:28 UTC
In master, the rectangle does not disappear/becomes invisible any more.

There is still the "jump" to the other page, but this is independent from my regression.